# python-packaging

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: packaging.yml  pages.yml
docs/: Gemfile  _config.yml  index.md
docs/.sass-cache/2107e3bf3da78d95ae5428a24244ed3cc40196d4/: jekyll-theme-cayman.scssc  normalize.scssc  rouge-github.scssc  variables.scssc
docs/_includes/: head-custom.html
docs/_site/: index.html
docs/assets/css/: baseline.css
src/imppkg/: data.json  harmonic_mean.py  harmonic_mean.pyx  harmony.py  hello.py
test/: test_harmonic_mean.py
