[metadata]
name = first-python-package
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
url = https://github.com/deburky/first-python-package
author = Denis
author_email = contact@xrisklab.ai
license = MIT
license_files = LICENSE

[options]
package_dir =
	= src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude = 
    test*